[package]
name = "chrmi"
version = "0.0.1"
authors = ["Chris Miller <crates@chrmi.com>"]
edition = "2018"
description = "Minimal test crate."
license = "MIT"
homepage = "https://www.chrmi.com/"
repository = "https://github.com/chrmi/chrmicrate"
readme = "README.md"
keywords = ["chrmi"]
categories = ["development-tools"]
